[workspace]
resolver = "2"

members = ["cli", "protos", "schema", "schema_derive", "server"]

[workspace.dependencies]
pbjson = "0.6.0"
pbjson-build = "0.6.2"
pbjson-types = "0.6.0"
prost = "0.12.6"
prost-build = "0.12.6"
#prost-types = "0.12.6"
serde = { version = "1.0.203", features = ["derive"] }
syn = { version = "2.0.66", features = ["full", "extra-traits"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
#prost-types = "0.12.6"

