[package]
name = "sqlc-gen-ftl"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
opt-level = 's'
strip = true

[build]
target = "wasm32-wasip1"

[dependencies]
bytes = { version = "1.6.0", default-features = false, features = ["std"] }
prost = { version = "0.13.3", default-features = false, features = ["std"] }
prost-types = { version = "0.13.3", default-features = false, features = ["std"] }
protoc-gen-prost = { version = "0.4.0" }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc", "std"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[build-dependencies]
prost-build = "0.13.3"

[dev-dependencies]
hex = "0.4.3"
sha2 = "0.10.6"
tempfile = "3.6.0"
wasmtime = "27.0.0"

[[bin]]
name = "sqlc-gen-ftl"
path = "src/main.rs"

[[test]]
name = "sqlc_gen_ftl_test"
path = "test/sqlc_gen_ftl_test.rs"

[features]
default = []
ci = []

