[package]
name = "sqlc-gen-ftl"
version = "0.1.0"
edition = "2021"

# [lib]
# crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 's'
strip = true

[dependencies]
bytes = { version = "1.6.0", default-features = false }
protoc-gen-prost = { version = "0.4.0", default-features = false }
prost = { version = "0.13.3", default-features = false }
prost-types = { version = "0.13.3", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[build-dependencies]
prost-build = "0.13.3"

[dev-dependencies]
hex = "0.4.3"
sha2 = "0.10.6"
tempfile = "3.6.0"
wasmtime = "27.0.0"

[[bin]]
name = "sqlc-gen-ftl"
path = "src/main.rs"

[[test]]
name = "sqlc_gen_ftl_test"
path = "test/sqlc_gen_ftl_test.rs"

