[project]
name = "ftl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moe Jangda", email = "moe@tbd.email" }
]
requires-python = ">=3.12"
dependencies = [
    "protobuf>=5.28.3",
    "google>=3.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
