[project]
name = "ftl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Moe Jangda", email = "moe@tbd.email" }
]
requires-python = ">=3.12"
dependencies = [
    "protobuf>=5.29.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
select = [
    "ANN001",  # missing type annotation for function argument
    "ANN002",  # missing type annotation for *args
    "ANN003",  # missing type annotation for **kwargs
    "ANN102",  # missing type annotation for cls in classmethod
    "ANN201",  # missing return type annotation for public function
    "ANN202",  # missing return type annotation for private function
    "ANN204",  # missing return type annotation for special method
    "ANN205",  # missing return type annotation for staticmethod
    "ANN206",  # missing return type annotation for classmethod
]
