[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "basic"
path = "src/basic/main.rs"

[dependencies]
ftl = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
ftl = { workspace = true }
